Práctica 3/y.output
State 120 conflicts: 1 shift/reduce


Grammar

    0 $accept: Programa $end

    1 Programa: Cabecera_programa bloque

    2 Cabecera_programa: PROG IDENT
    3                  | error

    4 bloque: BEG Declar_de_variables_locales Declar_de_subprogs Sentencias END

    5 Declar_de_subprogs: Declar_de_subprogs Declar_subprog
    6                   | /* empty */

    7 Declar_subprog: Cabecera_subprog bloque

    8 Cabecera_subprog: FUNCTION IDENT PARI Cuerpo_declar_variables PARD DOSPU tipo_dato PYC

    9 Declar_de_variables_locales: VAR Cuerpo_declar_variables ENDVAR
   10                            | /* empty */

   11 Cuerpo_declar_variables: Cuerpo_declar_variables lista_identificadores DOSPU tipo_dato PYC
   12                        | error
   13                        | /* empty */

   14 lista_identificadores: lista_identificadores COMA IDENT
   15                      | IDENT

   16 tipo_dato: TIPOBASICO
   17          | tipo_dato_B

   18 tipo_dato_B: LISTOF TIPOBASICO

   19 Sentencias: Sentencias Sentencia
   20           | /* empty */

   21 Sentencia: bloque
   22          | sentencia_if
   23          | sentencia_while
   24          | sentencia_for
   25          | sentencias_PYC PYC
   26          | error

   27 sentencia_if: alternativa_simple
   28             | alternativa_doble

   29 alternativa_simple: IF expresion THEN Sentencia

   30 alternativa_doble: IF expresion THEN Sentencia ELSE Sentencia

   31 sentencia_while: WHILE expresion DO Sentencia

   32 sentencia_for: FOR sentencia_asignacion TO expresion DO Sentencia

   33 sentencias_PYC: sentencia_return
   34               | sentencia_avance_retroceso
   35               | sentencia_asignacion
   36               | sentencia_cursor_comienzo
   37               | sentencia_entrada
   38               | sentencia_salida

   39 sentencia_return: RETURN expresion

   40 sentencia_asignacion: IDENT ASIG expresion

   41 sentencia_avance_retroceso: IDENT RETAV

   42 sentencia_cursor_comienzo: DOLAR IDENT

   43 sentencia_entrada: SCAN lista_variables

   44 sentencia_salida: PRINT lista_expresiones_o_cadena

   45 expresion: PARI expresion PARD
   46          | MASMENOS expresion
   47          | OPUNA expresion
   48          | expresion MASMENOS expresion
   49          | expresion MULDIV expresion
   50          | expresion OPOR expresion
   51          | expresion OPAND expresion
   52          | expresion OPIGUALDAD expresion
   53          | expresion OPRELACION expresion
   54          | expresion OPLISTA expresion
   55          | expresion OPTER2 expresion
   56          | expresion OPTER1 expresion OPTER2 expresion
   57          | IDENT
   58          | CONST
   59          | agregado
   60          | funcion
   61          | error

   62 lista_variables: lista_variables COMA IDENT
   63                | IDENT

   64 lista_expresiones_o_cadena: lista_expresiones_o_cadena COMA exp_cad
   65                           | exp_cad

   66 exp_cad: expresion
   67        | CAD

   68 lista_expresiones: lista_expresiones COMA expresion
   69                  | expresion

   70 agregado: CORI lista_constantes CORD

   71 lista_constantes: lista_constantes COMA CONST
   72                 | CONST

   73 funcion: IDENT PARI lista_expresiones PARD


Terminals, with rules where they appear

$end (0) 0
error (256) 3 12 26 61
MASMENOS (258) 46 48
OPUNA (259) 47
CONST (260) 58 71 72
IDENT (261) 2 8 14 15 40 41 42 57 62 63 73
CAD (262) 67
PARI (263) 8 45 73
PARD (264) 8 45 73
COMA (265) 14 62 64 68 71
PYC (266) 8 11 25
PRINT (267) 44
SCAN (268) 43
IF (269) 29 30
THEN (270) 29 30
ELSE (271) 30
WHILE (272) 31
DO (273) 31 32
FOR (274) 32
TO (275) 32
TIPOBASICO (276) 16 18
LISTOF (277) 18
BEG (278) 4
END (279) 4
VAR (280) 9
ENDVAR (281) 9
PROG (282) 2
FUNCTION (283) 8
RETURN (284) 39
ASIG (285) 40
CORD (286) 70
CORI (287) 70
DOSPU (288) 8 11
OPTER1 (289) 56
OPTER2 (290) 55 56
DOLAR (291) 42
RETAV (292) 41
OPOR (293) 50
OPAND (294) 51
MULDIV (295) 49
OPIGUALDAD (296) 52
OPRELACION (297) 53
OPLISTA (298) 54


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
Programa (45)
    on left: 1, on right: 0
Cabecera_programa (46)
    on left: 2 3, on right: 1
bloque (47)
    on left: 4, on right: 1 7 21
Declar_de_subprogs (48)
    on left: 5 6, on right: 4 5
Declar_subprog (49)
    on left: 7, on right: 5
Cabecera_subprog (50)
    on left: 8, on right: 7
Declar_de_variables_locales (51)
    on left: 9 10, on right: 4
Cuerpo_declar_variables (52)
    on left: 11 12 13, on right: 8 9 11
lista_identificadores (53)
    on left: 14 15, on right: 11 14
tipo_dato (54)
    on left: 16 17, on right: 8 11
tipo_dato_B (55)
    on left: 18, on right: 17
Sentencias (56)
    on left: 19 20, on right: 4 19
Sentencia (57)
    on left: 21 22 23 24 25 26, on right: 19 29 30 31 32
sentencia_if (58)
    on left: 27 28, on right: 22
alternativa_simple (59)
    on left: 29, on right: 27
alternativa_doble (60)
    on left: 30, on right: 28
sentencia_while (61)
    on left: 31, on right: 23
sentencia_for (62)
    on left: 32, on right: 24
sentencias_PYC (63)
    on left: 33 34 35 36 37 38, on right: 25
sentencia_return (64)
    on left: 39, on right: 33
sentencia_asignacion (65)
    on left: 40, on right: 32 35
sentencia_avance_retroceso (66)
    on left: 41, on right: 34
sentencia_cursor_comienzo (67)
    on left: 42, on right: 36
sentencia_entrada (68)
    on left: 43, on right: 37
sentencia_salida (69)
    on left: 44, on right: 38
expresion (70)
    on left: 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61, on right:
    29 30 31 32 39 40 45 46 47 48 49 50 51 52 53 54 55 56 66 68 69
lista_variables (71)
    on left: 62 63, on right: 43 62
lista_expresiones_o_cadena (72)
    on left: 64 65, on right: 44 64
exp_cad (73)
    on left: 66 67, on right: 64 65
lista_expresiones (74)
    on left: 68 69, on right: 68 73
agregado (75)
    on left: 70, on right: 59
lista_constantes (76)
    on left: 71 72, on right: 70 71
funcion (77)
    on left: 73, on right: 60


state 0

    0 $accept: . Programa $end

    error  shift, and go to state 1
    PROG   shift, and go to state 2

    Programa           go to state 3
    Cabecera_programa  go to state 4


state 1

    3 Cabecera_programa: error .

    $default  reduce using rule 3 (Cabecera_programa)


state 2

    2 Cabecera_programa: PROG . IDENT

    IDENT  shift, and go to state 5


state 3

    0 $accept: Programa . $end

    $end  shift, and go to state 6


state 4

    1 Programa: Cabecera_programa . bloque

    BEG  shift, and go to state 7

    bloque  go to state 8


state 5

    2 Cabecera_programa: PROG IDENT .

    $default  reduce using rule 2 (Cabecera_programa)


state 6

    0 $accept: Programa $end .

    $default  accept


state 7

    4 bloque: BEG . Declar_de_variables_locales Declar_de_subprogs Sentencias END

    VAR  shift, and go to state 9

    $default  reduce using rule 10 (Declar_de_variables_locales)

    Declar_de_variables_locales  go to state 10


state 8

    1 Programa: Cabecera_programa bloque .

    $default  reduce using rule 1 (Programa)


state 9

    9 Declar_de_variables_locales: VAR . Cuerpo_declar_variables ENDVAR

    error  shift, and go to state 11

    IDENT   reduce using rule 13 (Cuerpo_declar_variables)
    ENDVAR  reduce using rule 13 (Cuerpo_declar_variables)

    Cuerpo_declar_variables  go to state 12


state 10

    4 bloque: BEG Declar_de_variables_locales . Declar_de_subprogs Sentencias END

    $default  reduce using rule 6 (Declar_de_subprogs)

    Declar_de_subprogs  go to state 13


state 11

   12 Cuerpo_declar_variables: error .

    $default  reduce using rule 12 (Cuerpo_declar_variables)


state 12

    9 Declar_de_variables_locales: VAR Cuerpo_declar_variables . ENDVAR
   11 Cuerpo_declar_variables: Cuerpo_declar_variables . lista_identificadores DOSPU tipo_dato PYC

    IDENT   shift, and go to state 14
    ENDVAR  shift, and go to state 15

    lista_identificadores  go to state 16


state 13

    4 bloque: BEG Declar_de_variables_locales Declar_de_subprogs . Sentencias END
    5 Declar_de_subprogs: Declar_de_subprogs . Declar_subprog

    FUNCTION  shift, and go to state 17

    $default  reduce using rule 20 (Sentencias)

    Declar_subprog    go to state 18
    Cabecera_subprog  go to state 19
    Sentencias        go to state 20


state 14

   15 lista_identificadores: IDENT .

    $default  reduce using rule 15 (lista_identificadores)


state 15

    9 Declar_de_variables_locales: VAR Cuerpo_declar_variables ENDVAR .

    $default  reduce using rule 9 (Declar_de_variables_locales)


state 16

   11 Cuerpo_declar_variables: Cuerpo_declar_variables lista_identificadores . DOSPU tipo_dato PYC
   14 lista_identificadores: lista_identificadores . COMA IDENT

    COMA   shift, and go to state 21
    DOSPU  shift, and go to state 22


state 17

    8 Cabecera_subprog: FUNCTION . IDENT PARI Cuerpo_declar_variables PARD DOSPU tipo_dato PYC

    IDENT  shift, and go to state 23


state 18

    5 Declar_de_subprogs: Declar_de_subprogs Declar_subprog .

    $default  reduce using rule 5 (Declar_de_subprogs)


state 19

    7 Declar_subprog: Cabecera_subprog . bloque

    BEG  shift, and go to state 7

    bloque  go to state 24


state 20

    4 bloque: BEG Declar_de_variables_locales Declar_de_subprogs Sentencias . END
   19 Sentencias: Sentencias . Sentencia

    error   shift, and go to state 25
    IDENT   shift, and go to state 26
    PRINT   shift, and go to state 27
    SCAN    shift, and go to state 28
    IF      shift, and go to state 29
    WHILE   shift, and go to state 30
    FOR     shift, and go to state 31
    BEG     shift, and go to state 7
    END     shift, and go to state 32
    RETURN  shift, and go to state 33
    DOLAR   shift, and go to state 34

    bloque                      go to state 35
    Sentencia                   go to state 36
    sentencia_if                go to state 37
    alternativa_simple          go to state 38
    alternativa_doble           go to state 39
    sentencia_while             go to state 40
    sentencia_for               go to state 41
    sentencias_PYC              go to state 42
    sentencia_return            go to state 43
    sentencia_asignacion        go to state 44
    sentencia_avance_retroceso  go to state 45
    sentencia_cursor_comienzo   go to state 46
    sentencia_entrada           go to state 47
    sentencia_salida            go to state 48


state 21

   14 lista_identificadores: lista_identificadores COMA . IDENT

    IDENT  shift, and go to state 49


state 22

   11 Cuerpo_declar_variables: Cuerpo_declar_variables lista_identificadores DOSPU . tipo_dato PYC

    TIPOBASICO  shift, and go to state 50
    LISTOF      shift, and go to state 51

    tipo_dato    go to state 52
    tipo_dato_B  go to state 53


state 23

    8 Cabecera_subprog: FUNCTION IDENT . PARI Cuerpo_declar_variables PARD DOSPU tipo_dato PYC

    PARI  shift, and go to state 54


state 24

    7 Declar_subprog: Cabecera_subprog bloque .

    $default  reduce using rule 7 (Declar_subprog)


state 25

   26 Sentencia: error .

    $default  reduce using rule 26 (Sentencia)


state 26

   40 sentencia_asignacion: IDENT . ASIG expresion
   41 sentencia_avance_retroceso: IDENT . RETAV

    ASIG   shift, and go to state 55
    RETAV  shift, and go to state 56


state 27

   44 sentencia_salida: PRINT . lista_expresiones_o_cadena

    error     shift, and go to state 57
    MASMENOS  shift, and go to state 58
    OPUNA     shift, and go to state 59
    CONST     shift, and go to state 60
    IDENT     shift, and go to state 61
    CAD       shift, and go to state 62
    PARI      shift, and go to state 63
    CORI      shift, and go to state 64

    expresion                   go to state 65
    lista_expresiones_o_cadena  go to state 66
    exp_cad                     go to state 67
    agregado                    go to state 68
    funcion                     go to state 69


state 28

   43 sentencia_entrada: SCAN . lista_variables

    IDENT  shift, and go to state 70

    lista_variables  go to state 71


state 29

   29 alternativa_simple: IF . expresion THEN Sentencia
   30 alternativa_doble: IF . expresion THEN Sentencia ELSE Sentencia

    error     shift, and go to state 57
    MASMENOS  shift, and go to state 58
    OPUNA     shift, and go to state 59
    CONST     shift, and go to state 60
    IDENT     shift, and go to state 61
    PARI      shift, and go to state 63
    CORI      shift, and go to state 64

    expresion  go to state 72
    agregado   go to state 68
    funcion    go to state 69


state 30

   31 sentencia_while: WHILE . expresion DO Sentencia

    error     shift, and go to state 57
    MASMENOS  shift, and go to state 58
    OPUNA     shift, and go to state 59
    CONST     shift, and go to state 60
    IDENT     shift, and go to state 61
    PARI      shift, and go to state 63
    CORI      shift, and go to state 64

    expresion  go to state 73
    agregado   go to state 68
    funcion    go to state 69


state 31

   32 sentencia_for: FOR . sentencia_asignacion TO expresion DO Sentencia

    IDENT  shift, and go to state 74

    sentencia_asignacion  go to state 75


state 32

    4 bloque: BEG Declar_de_variables_locales Declar_de_subprogs Sentencias END .

    $default  reduce using rule 4 (bloque)


state 33

   39 sentencia_return: RETURN . expresion

    error     shift, and go to state 57
    MASMENOS  shift, and go to state 58
    OPUNA     shift, and go to state 59
    CONST     shift, and go to state 60
    IDENT     shift, and go to state 61
    PARI      shift, and go to state 63
    CORI      shift, and go to state 64

    expresion  go to state 76
    agregado   go to state 68
    funcion    go to state 69


state 34

   42 sentencia_cursor_comienzo: DOLAR . IDENT

    IDENT  shift, and go to state 77


state 35

   21 Sentencia: bloque .

    $default  reduce using rule 21 (Sentencia)


state 36

   19 Sentencias: Sentencias Sentencia .

    $default  reduce using rule 19 (Sentencias)


state 37

   22 Sentencia: sentencia_if .

    $default  reduce using rule 22 (Sentencia)


state 38

   27 sentencia_if: alternativa_simple .

    $default  reduce using rule 27 (sentencia_if)


state 39

   28 sentencia_if: alternativa_doble .

    $default  reduce using rule 28 (sentencia_if)


state 40

   23 Sentencia: sentencia_while .

    $default  reduce using rule 23 (Sentencia)


state 41

   24 Sentencia: sentencia_for .

    $default  reduce using rule 24 (Sentencia)


state 42

   25 Sentencia: sentencias_PYC . PYC

    PYC  shift, and go to state 78


state 43

   33 sentencias_PYC: sentencia_return .

    $default  reduce using rule 33 (sentencias_PYC)


state 44

   35 sentencias_PYC: sentencia_asignacion .

    $default  reduce using rule 35 (sentencias_PYC)


state 45

   34 sentencias_PYC: sentencia_avance_retroceso .

    $default  reduce using rule 34 (sentencias_PYC)


state 46

   36 sentencias_PYC: sentencia_cursor_comienzo .

    $default  reduce using rule 36 (sentencias_PYC)


state 47

   37 sentencias_PYC: sentencia_entrada .

    $default  reduce using rule 37 (sentencias_PYC)


state 48

   38 sentencias_PYC: sentencia_salida .

    $default  reduce using rule 38 (sentencias_PYC)


state 49

   14 lista_identificadores: lista_identificadores COMA IDENT .

    $default  reduce using rule 14 (lista_identificadores)


state 50

   16 tipo_dato: TIPOBASICO .

    $default  reduce using rule 16 (tipo_dato)


state 51

   18 tipo_dato_B: LISTOF . TIPOBASICO

    TIPOBASICO  shift, and go to state 79


state 52

   11 Cuerpo_declar_variables: Cuerpo_declar_variables lista_identificadores DOSPU tipo_dato . PYC

    PYC  shift, and go to state 80


state 53

   17 tipo_dato: tipo_dato_B .

    $default  reduce using rule 17 (tipo_dato)


state 54

    8 Cabecera_subprog: FUNCTION IDENT PARI . Cuerpo_declar_variables PARD DOSPU tipo_dato PYC

    error  shift, and go to state 11

    IDENT  reduce using rule 13 (Cuerpo_declar_variables)
    PARD   reduce using rule 13 (Cuerpo_declar_variables)

    Cuerpo_declar_variables  go to state 81


state 55

   40 sentencia_asignacion: IDENT ASIG . expresion

    error     shift, and go to state 57
    MASMENOS  shift, and go to state 58
    OPUNA     shift, and go to state 59
    CONST     shift, and go to state 60
    IDENT     shift, and go to state 61
    PARI      shift, and go to state 63
    CORI      shift, and go to state 64

    expresion  go to state 82
    agregado   go to state 68
    funcion    go to state 69


state 56

   41 sentencia_avance_retroceso: IDENT RETAV .

    $default  reduce using rule 41 (sentencia_avance_retroceso)


state 57

   61 expresion: error .

    $default  reduce using rule 61 (expresion)


state 58

   46 expresion: MASMENOS . expresion

    error     shift, and go to state 57
    MASMENOS  shift, and go to state 58
    OPUNA     shift, and go to state 59
    CONST     shift, and go to state 60
    IDENT     shift, and go to state 61
    PARI      shift, and go to state 63
    CORI      shift, and go to state 64

    expresion  go to state 83
    agregado   go to state 68
    funcion    go to state 69


state 59

   47 expresion: OPUNA . expresion

    error     shift, and go to state 57
    MASMENOS  shift, and go to state 58
    OPUNA     shift, and go to state 59
    CONST     shift, and go to state 60
    IDENT     shift, and go to state 61
    PARI      shift, and go to state 63
    CORI      shift, and go to state 64

    expresion  go to state 84
    agregado   go to state 68
    funcion    go to state 69


state 60

   58 expresion: CONST .

    $default  reduce using rule 58 (expresion)


state 61

   57 expresion: IDENT .
   73 funcion: IDENT . PARI lista_expresiones PARD

    PARI  shift, and go to state 85

    $default  reduce using rule 57 (expresion)


state 62

   67 exp_cad: CAD .

    $default  reduce using rule 67 (exp_cad)


state 63

   45 expresion: PARI . expresion PARD

    error     shift, and go to state 57
    MASMENOS  shift, and go to state 58
    OPUNA     shift, and go to state 59
    CONST     shift, and go to state 60
    IDENT     shift, and go to state 61
    PARI      shift, and go to state 63
    CORI      shift, and go to state 64

    expresion  go to state 86
    agregado   go to state 68
    funcion    go to state 69


state 64

   70 agregado: CORI . lista_constantes CORD

    CONST  shift, and go to state 87

    lista_constantes  go to state 88


state 65

   48 expresion: expresion . MASMENOS expresion
   49          | expresion . MULDIV expresion
   50          | expresion . OPOR expresion
   51          | expresion . OPAND expresion
   52          | expresion . OPIGUALDAD expresion
   53          | expresion . OPRELACION expresion
   54          | expresion . OPLISTA expresion
   55          | expresion . OPTER2 expresion
   56          | expresion . OPTER1 expresion OPTER2 expresion
   66 exp_cad: expresion .

    MASMENOS    shift, and go to state 89
    OPTER1      shift, and go to state 90
    OPTER2      shift, and go to state 91
    OPOR        shift, and go to state 92
    OPAND       shift, and go to state 93
    MULDIV      shift, and go to state 94
    OPIGUALDAD  shift, and go to state 95
    OPRELACION  shift, and go to state 96
    OPLISTA     shift, and go to state 97

    $default  reduce using rule 66 (exp_cad)


state 66

   44 sentencia_salida: PRINT lista_expresiones_o_cadena .
   64 lista_expresiones_o_cadena: lista_expresiones_o_cadena . COMA exp_cad

    COMA  shift, and go to state 98

    $default  reduce using rule 44 (sentencia_salida)


state 67

   65 lista_expresiones_o_cadena: exp_cad .

    $default  reduce using rule 65 (lista_expresiones_o_cadena)


state 68

   59 expresion: agregado .

    $default  reduce using rule 59 (expresion)


state 69

   60 expresion: funcion .

    $default  reduce using rule 60 (expresion)


state 70

   63 lista_variables: IDENT .

    $default  reduce using rule 63 (lista_variables)


state 71

   43 sentencia_entrada: SCAN lista_variables .
   62 lista_variables: lista_variables . COMA IDENT

    COMA  shift, and go to state 99

    $default  reduce using rule 43 (sentencia_entrada)


state 72

   29 alternativa_simple: IF expresion . THEN Sentencia
   30 alternativa_doble: IF expresion . THEN Sentencia ELSE Sentencia
   48 expresion: expresion . MASMENOS expresion
   49          | expresion . MULDIV expresion
   50          | expresion . OPOR expresion
   51          | expresion . OPAND expresion
   52          | expresion . OPIGUALDAD expresion
   53          | expresion . OPRELACION expresion
   54          | expresion . OPLISTA expresion
   55          | expresion . OPTER2 expresion
   56          | expresion . OPTER1 expresion OPTER2 expresion

    MASMENOS    shift, and go to state 89
    THEN        shift, and go to state 100
    OPTER1      shift, and go to state 90
    OPTER2      shift, and go to state 91
    OPOR        shift, and go to state 92
    OPAND       shift, and go to state 93
    MULDIV      shift, and go to state 94
    OPIGUALDAD  shift, and go to state 95
    OPRELACION  shift, and go to state 96
    OPLISTA     shift, and go to state 97


state 73

   31 sentencia_while: WHILE expresion . DO Sentencia
   48 expresion: expresion . MASMENOS expresion
   49          | expresion . MULDIV expresion
   50          | expresion . OPOR expresion
   51          | expresion . OPAND expresion
   52          | expresion . OPIGUALDAD expresion
   53          | expresion . OPRELACION expresion
   54          | expresion . OPLISTA expresion
   55          | expresion . OPTER2 expresion
   56          | expresion . OPTER1 expresion OPTER2 expresion

    MASMENOS    shift, and go to state 89
    DO          shift, and go to state 101
    OPTER1      shift, and go to state 90
    OPTER2      shift, and go to state 91
    OPOR        shift, and go to state 92
    OPAND       shift, and go to state 93
    MULDIV      shift, and go to state 94
    OPIGUALDAD  shift, and go to state 95
    OPRELACION  shift, and go to state 96
    OPLISTA     shift, and go to state 97


state 74

   40 sentencia_asignacion: IDENT . ASIG expresion

    ASIG  shift, and go to state 55


state 75

   32 sentencia_for: FOR sentencia_asignacion . TO expresion DO Sentencia

    TO  shift, and go to state 102


state 76

   39 sentencia_return: RETURN expresion .
   48 expresion: expresion . MASMENOS expresion
   49          | expresion . MULDIV expresion
   50          | expresion . OPOR expresion
   51          | expresion . OPAND expresion
   52          | expresion . OPIGUALDAD expresion
   53          | expresion . OPRELACION expresion
   54          | expresion . OPLISTA expresion
   55          | expresion . OPTER2 expresion
   56          | expresion . OPTER1 expresion OPTER2 expresion

    MASMENOS    shift, and go to state 89
    OPTER1      shift, and go to state 90
    OPTER2      shift, and go to state 91
    OPOR        shift, and go to state 92
    OPAND       shift, and go to state 93
    MULDIV      shift, and go to state 94
    OPIGUALDAD  shift, and go to state 95
    OPRELACION  shift, and go to state 96
    OPLISTA     shift, and go to state 97

    $default  reduce using rule 39 (sentencia_return)


state 77

   42 sentencia_cursor_comienzo: DOLAR IDENT .

    $default  reduce using rule 42 (sentencia_cursor_comienzo)


state 78

   25 Sentencia: sentencias_PYC PYC .

    $default  reduce using rule 25 (Sentencia)


state 79

   18 tipo_dato_B: LISTOF TIPOBASICO .

    $default  reduce using rule 18 (tipo_dato_B)


state 80

   11 Cuerpo_declar_variables: Cuerpo_declar_variables lista_identificadores DOSPU tipo_dato PYC .

    $default  reduce using rule 11 (Cuerpo_declar_variables)


state 81

    8 Cabecera_subprog: FUNCTION IDENT PARI Cuerpo_declar_variables . PARD DOSPU tipo_dato PYC
   11 Cuerpo_declar_variables: Cuerpo_declar_variables . lista_identificadores DOSPU tipo_dato PYC

    IDENT  shift, and go to state 14
    PARD   shift, and go to state 103

    lista_identificadores  go to state 16


state 82

   40 sentencia_asignacion: IDENT ASIG expresion .
   48 expresion: expresion . MASMENOS expresion
   49          | expresion . MULDIV expresion
   50          | expresion . OPOR expresion
   51          | expresion . OPAND expresion
   52          | expresion . OPIGUALDAD expresion
   53          | expresion . OPRELACION expresion
   54          | expresion . OPLISTA expresion
   55          | expresion . OPTER2 expresion
   56          | expresion . OPTER1 expresion OPTER2 expresion

    MASMENOS    shift, and go to state 89
    OPTER1      shift, and go to state 90
    OPTER2      shift, and go to state 91
    OPOR        shift, and go to state 92
    OPAND       shift, and go to state 93
    MULDIV      shift, and go to state 94
    OPIGUALDAD  shift, and go to state 95
    OPRELACION  shift, and go to state 96
    OPLISTA     shift, and go to state 97

    $default  reduce using rule 40 (sentencia_asignacion)


state 83

   46 expresion: MASMENOS expresion .
   48          | expresion . MASMENOS expresion
   49          | expresion . MULDIV expresion
   50          | expresion . OPOR expresion
   51          | expresion . OPAND expresion
   52          | expresion . OPIGUALDAD expresion
   53          | expresion . OPRELACION expresion
   54          | expresion . OPLISTA expresion
   55          | expresion . OPTER2 expresion
   56          | expresion . OPTER1 expresion OPTER2 expresion

    $default  reduce using rule 46 (expresion)


state 84

   47 expresion: OPUNA expresion .
   48          | expresion . MASMENOS expresion
   49          | expresion . MULDIV expresion
   50          | expresion . OPOR expresion
   51          | expresion . OPAND expresion
   52          | expresion . OPIGUALDAD expresion
   53          | expresion . OPRELACION expresion
   54          | expresion . OPLISTA expresion
   55          | expresion . OPTER2 expresion
   56          | expresion . OPTER1 expresion OPTER2 expresion

    $default  reduce using rule 47 (expresion)


state 85

   73 funcion: IDENT PARI . lista_expresiones PARD

    error     shift, and go to state 57
    MASMENOS  shift, and go to state 58
    OPUNA     shift, and go to state 59
    CONST     shift, and go to state 60
    IDENT     shift, and go to state 61
    PARI      shift, and go to state 63
    CORI      shift, and go to state 64

    expresion          go to state 104
    lista_expresiones  go to state 105
    agregado           go to state 68
    funcion            go to state 69


state 86

   45 expresion: PARI expresion . PARD
   48          | expresion . MASMENOS expresion
   49          | expresion . MULDIV expresion
   50          | expresion . OPOR expresion
   51          | expresion . OPAND expresion
   52          | expresion . OPIGUALDAD expresion
   53          | expresion . OPRELACION expresion
   54          | expresion . OPLISTA expresion
   55          | expresion . OPTER2 expresion
   56          | expresion . OPTER1 expresion OPTER2 expresion

    MASMENOS    shift, and go to state 89
    PARD        shift, and go to state 106
    OPTER1      shift, and go to state 90
    OPTER2      shift, and go to state 91
    OPOR        shift, and go to state 92
    OPAND       shift, and go to state 93
    MULDIV      shift, and go to state 94
    OPIGUALDAD  shift, and go to state 95
    OPRELACION  shift, and go to state 96
    OPLISTA     shift, and go to state 97


state 87

   72 lista_constantes: CONST .

    $default  reduce using rule 72 (lista_constantes)


state 88

   70 agregado: CORI lista_constantes . CORD
   71 lista_constantes: lista_constantes . COMA CONST

    COMA  shift, and go to state 107
    CORD  shift, and go to state 108


state 89

   48 expresion: expresion MASMENOS . expresion

    error     shift, and go to state 57
    MASMENOS  shift, and go to state 58
    OPUNA     shift, and go to state 59
    CONST     shift, and go to state 60
    IDENT     shift, and go to state 61
    PARI      shift, and go to state 63
    CORI      shift, and go to state 64

    expresion  go to state 109
    agregado   go to state 68
    funcion    go to state 69


state 90

   56 expresion: expresion OPTER1 . expresion OPTER2 expresion

    error     shift, and go to state 57
    MASMENOS  shift, and go to state 58
    OPUNA     shift, and go to state 59
    CONST     shift, and go to state 60
    IDENT     shift, and go to state 61
    PARI      shift, and go to state 63
    CORI      shift, and go to state 64

    expresion  go to state 110
    agregado   go to state 68
    funcion    go to state 69


state 91

   55 expresion: expresion OPTER2 . expresion

    error     shift, and go to state 57
    MASMENOS  shift, and go to state 58
    OPUNA     shift, and go to state 59
    CONST     shift, and go to state 60
    IDENT     shift, and go to state 61
    PARI      shift, and go to state 63
    CORI      shift, and go to state 64

    expresion  go to state 111
    agregado   go to state 68
    funcion    go to state 69


state 92

   50 expresion: expresion OPOR . expresion

    error     shift, and go to state 57
    MASMENOS  shift, and go to state 58
    OPUNA     shift, and go to state 59
    CONST     shift, and go to state 60
    IDENT     shift, and go to state 61
    PARI      shift, and go to state 63
    CORI      shift, and go to state 64

    expresion  go to state 112
    agregado   go to state 68
    funcion    go to state 69


state 93

   51 expresion: expresion OPAND . expresion
